add exception handling for entities in CalculationService, change null checks in OrderDetailsService and OrderDetailsTemplateService with using if statements, add @Slf4j